--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     background-color: #53bc96;
     height: 60px;
     font-size: 2rem;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     display: flex;
 }
@@ -37,7 +37,7 @@
 
 .nav-item {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     list-style: none;
     padding: 8px 8px 8px 8px;
@@ -69,7 +69,7 @@
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 }
 
